# midas

./: .air.toml  .editorconfig  .gitignore  .golangci.yml  Cargo.toml  Justfile  Makefile  README.md  bacon.toml  build.rs  go.mod  go.sum  mise.toml  rust-toolchain.toml  rustfmt.toml  start_with_tmux.sh
cmd/cli/: main.go
crates/midas/: Cargo.toml  build.rs
crates/midas-cli/: Cargo.toml
crates/midas-cli/src/: lib.rs
crates/midas/src/: config.rs  error.rs  fs_tree.rs  lib.rs  status.rs
crates/midas/src/typescript/: mod.rs
crates/midas_core/: Cargo.toml  build.rs
input/: hey.ts
internal/app/: logger.go
internal/config/: config.go
internal/config/parsers/: parsers.go
internal/ui/: styles.go
internal/ui/color/: color.go
internal/ui/config/: config.go
internal/ui/config/parsers/lua/: lua.go
internal/ui/model/: model.go
internal/ui/models/panic/: panic.go
internal/ui/program/: key_map.go  program.go
src/typescript/: mod.rs  module_loader.rs
