[package]
name = "midas"
authors = ["Pablo Hernandez (@hadronomy)"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
deno_ast = "0.44.0"
deno_core = "0.327.0"
deno_graph = "0.86.5"
deno_runtime = "0.192.0"
deno_semver = "0.7.1"
human-panic = "2.0.2"
miette = { version = "7.4.0", features = ["fancy"] }
node_resolver = "0.22.0"
serde = "1.0.216"
serde_derive = "1.0.216"
serde_json = "1.0.134"
tempfile = "3.14.0"
thiserror = "2.0.9"
tokio = "1.42.0"
