[package]
authors = ["Pablo Hernandez (@hadronomy)"]
edition = "2021"
name    = "midas"
version = "0.1.0"

[features]
default = []
deno    = ["serde", "deno_ast", "deno_core", "deno_graph", "deno_runtime", "deno_semver"]
serde   = ["dep:serde", "serde_json", "serde_derive"]

[dependencies]
anyhow      = "1.0.95"
globset     = { version = "0.4.15", features = ["serde"] }
human-panic = "2.0.2"
miette      = "7.4.0"
petgraph    = "0.6.5"
rkyv        = "0.8.9"
semver      = "1.0.24"
tempfile    = "3.14.0"
thiserror   = "2.0.9"
tokio       = "1.42.0"
walkdir     = "2.5.0"

# Optional deno dependencies
deno_ast     = { version = "0.44.0", optional = true }
deno_core    = { version = "0.327.0", optional = true }
deno_graph   = { version = "0.86.5", optional = true }
deno_runtime = { version = "0.192.0", optional = true }
deno_semver  = { version = "0.7.1", optional = true }

# Optional serde dependencies
serde        = { version = "1.0.216", optional = true }
serde_derive = { version = "1.0.216", optional = true }
serde_json   = { version = "1.0.134", optional = true }


[build-dependencies]
deno_core    = { version = "0.327.0", optional = true }
deno_runtime = { version = "0.192.0", optional = true }

[dev-dependencies]
clap   = { version = "4.5.23", features = ["derive"] }
miette = { version = "7.4.0", features = ["fancy"] }
tokio  = { version = "1.42.0", features = ["full"] }

[[example]]
name              = "read_config"
required-features = ["deno"]
