[package]
name    = "midas"
version = "0.1.0"

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[features]
default = []
deno    = ["serde", "deno_ast", "deno_core", "deno_graph", "deno_runtime", "deno_semver"]
serde   = ["dep:serde", "serde_json", "serde_derive"]

[dependencies]
anstream    = { workspace = true }
anyhow      = { workspace = true }
clap        = { workspace = true }
globset     = { workspace = true, features = ["serde"] }
human-panic = { workspace = true }
miette      = { workspace = true }
owo-colors  = { workspace = true }
petgraph    = { workspace = true }
rkyv        = { workspace = true }
semver      = { workspace = true }
tempfile    = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
walkdir     = { workspace = true }

# Optional deno dependencies
deno_ast     = { workspace = true, optional = true }
deno_core    = { workspace = true, optional = true }
deno_graph   = { workspace = true, optional = true }
deno_runtime = { workspace = true, optional = true }
deno_semver  = { workspace = true, optional = true }

# Optional serde dependencies
file_type_enum = { workspace = true }
flate2         = { workspace = true }
itertools      = { workspace = true }
once_cell      = { workspace = true }
serde          = { workspace = true, optional = true }
serde_derive   = { workspace = true, optional = true }
serde_json     = { workspace = true, optional = true }
vfs            = { workspace = true }


midas-cli = { workspace = true }


[build-dependencies]
deno_core    = { workspace = true, optional = true }
deno_runtime = { workspace = true, optional = true }

[[bin]]
name = "midas"
